# bamboo

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  pages.yml
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs
crates/bamboo/: Cargo.toml
crates/bamboo-cli/: Cargo.toml
crates/bamboo-cli/src/: commands.rs
crates/bamboo/src/: assets.rs  cache.rs  error.rs  feeds.rs  images.rs  lib.rs  links.rs  parsing.rs  redirects.rs  search.rs  shortcodes.rs  site.rs  sitemap.rs  taxonomy.rs  theme.rs  types.rs  xml.rs
crates/bamboo/themes/default/: theme.toml
crates/bamboo/themes/default/static/: style.css
crates/bamboo/themes/default/templates/: 404.html  archive.html  base.html  book.html  categories.html  categories_grouped.html  category.html  changelog.html  collection.html  collection_item.html  docs.html  index.html  landing.html  page.html  pagination.html  portfolio.html  post.html  search.html  slideshow.html  tag.html  tags.html  tags_grouped.html  taxonomy.html  taxonomy_term.html
crates/bamboo/themes/default/templates/partials/: author_profile.html  footer.html  header.html  nav.html  page_edit_link.html  post_breadcrumbs.html  post_edit_link.html  post_header.html  post_hero_image.html  post_prev_next.html  post_related.html  post_share.html  post_toc.html
crates/bamboo/themes/default/templates/shortcodes/: details.html  figure.html  gist.html  note.html  pdf.html  youtube.html
examples/blog/: bamboo.toml
examples/blog/content/: _index.md  about.md  archive.md  categories.md  tags.md
examples/blog/content/guides/: _index.md  (+1 more)
examples/blog/data/: navigation.toml
examples/book/: bamboo.toml
examples/book/content/: _index.md
examples/book/data/: sidebar.toml
examples/changelog/: bamboo.toml
examples/changelog/content/: _index.md
examples/docs/: bamboo.toml
examples/docs/content/: _index.md
examples/docs/data/: sidebar.toml
examples/landing/: bamboo.toml
examples/landing/content/: _index.md
examples/landing/data/: features.toml  pricing.toml  testimonials.toml
examples/portfolio/: bamboo.toml
examples/portfolio/content/: _index.md  about.md
examples/portfolio/data/: crates.toml  education.toml  experience.toml  highlights.toml  projects.toml  skills.toml
examples/slideshow/: bamboo.toml
examples/slideshow/content/: _index.md
site/: bamboo.toml
site/content/: _index.md
site/data/: features.toml  gallery.toml
themes/default/templates/: 404.html  base.html  categories.html  category.html  changelog.html  collection_item.html  index.html  pagination.html  portfolio.html  post.html  tag.html
(+51 files in other folders)
