[package]
name = "bamboo-ssg"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A fast static site generator written in Rust"
repository = "https://github.com/matthewjberger/bamboo"
homepage = "https://github.com/matthewjberger/bamboo"
readme = "../../README.md"
keywords = ["static-site", "markdown", "blog", "tera", "ssg"]
categories = ["command-line-utilities", "web-programming"]
authors = ["Matthew J. Berger <matthewjordanberger@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yml = "0.0.12"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tera = "1"
thiserror = "2"
walkdir = "2"
syntect = "5"
grass = "0.13"
rayon = "1"
sha2 = "0.10"
minify-html = "0.15"
image = "0.25"
webp = "0.3"
lightningcss = "1.0.0-alpha.67"
minify-js = "0.6"

[dev-dependencies]
tempfile = "3"
